# ermine

./: .gitignore  Cargo.toml  GEMINI.md  README.md  create_test_model.rs
burn-ggml/: Cargo.toml  create_test_model_tmp.py
burn-ggml/src/: backend.rs  context.rs  device.rs  gguf.rs  graph.rs  lib.rs  main.rs  tensor.rs
burn-ggml/src/memory/: kv_offload.rs  mod.rs  weight_cache.rs
burn-ggml/src/model/: mod.rs  qwen.rs  qwen35.rs
burn-ggml/src/ops/: activation_ops.rs  bool_ops.rs  float_ops.rs  int_ops.rs  mod.rs  module_ops.rs  offload.rs  prefetch.rs  quant_ops.rs  tokenizer.rs
burn-ggml/tests/: test_backend_full.rs  test_backend_rust.rs  test_prefetch.rs  test_qwen_inference.rs  test_weight_cache.rs  test_wgpu_memory.rs
design/: PHASE_1_TODO.md  PHASE_2_TODO.md  vulkan-android-support.md
ggml-sys/: Cargo.toml  build.rs  wrapper.h
ggml-sys/src/: lib.rs
